# ngcp-logic-engine

./: .cruft.json  .gitreview  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: deploy.yml  test.yml
debian/: .gitignore  changelog  control  copyright  ngcp-logic-engine.default  ngcp-logic-engine.dirs  ngcp-logic-engine.install  ngcp-logic-engine.service  rules
dev/redis/: data.redis  entrypoint.sh
src/ngcp_logic_engine/: __init__.py  api.py  config.py  counters.py  dialogmanager.py  redismanager.py  utils.py
src/ngcp_logic_engine/models/: api.py  dialog.py
src/ngcp_logic_engine/openapi/: __init__.py  examples.py
t/: Dockerfile  testrunner
tests/: __init__.py  conftest.py  test_api.py  test_config.py  test_import.py  test_utils.py
